--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -1,8 +1,13 @@
 :root {
+  --header-background-color-mobile: #ffffff;
+  --header-background-color: transparent;
   --base-font-color: #444444;
   --button-color: #68b738;
+  --line-color: #68b738;
   --button-text-color: #ffffff;
   --navigation-text-color: #000000;
   --input-border-color: #e7e7e7;
   --show-more-base-color: #f2f2f2;
+  --line-after-description-color: #e6e6e6;
+  --fact-border-color: #cdcdcd;
 }
