--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -2,23 +2,76 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 20px 0;
+  padding-bottom: 20px;
+
+  @media (--middle-vp) {
+    padding-bottom: 49px;
+  }
 
   @media (--wide-vp) {
     display: flex;
     flex-direction: row;
     gap: 80px;
+    padding-bottom: 71px;
   }
 }
 
 .nutrition-programm__card {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 19px;
+  row-gap: 22px;
+  align-items: center;
   box-sizing: border-box;
   background-color: #f2f2f2;
   padding: 22px;
 
+  @media (--middle-vp) {
+    display: grid;
+    grid-template-columns: 1fr 270px;
+  }
+
   @media (--wide-vp) {
     max-width: 570px;
     margin: 0;
+  }
+}
+
+.nutrition-programm__card--slim::before {
+  content: url("../../icons/sprite.svg#cat-slim");
+  display: block;
+  width: 50px;
+  height: 53px;
+
+  @media (--middle-vp) {
+    grid-area: 1/2/3/3;
+    justify-self: center;
+    width: 200px;
+    height: 211px;
+  }
+
+  @media (--wide-vp) {
+    width: 100px;
+    height: 106px;
+  }
+}
+
+.nutrition-programm__card--fat::before {
+  content: url("../../icons/sprite.svg#cat-muscle");
+  display: block;
+  width: 67px;
+  height: 50px;
+
+  @media (--middle-vp) {
+    grid-area: 1/2/3/3;
+    justify-self: center;
+    width: 268px;
+    height: 200px;
+  }
+
+  @media (--wide-vp) {
+    width: 134px;
+    height: 100px;
   }
 }
 
@@ -33,6 +86,14 @@
   margin: 0;
 
   @media (--middle-vp) {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: start;
+  }
+
+  @media (--wide-vp) {
+    font-size: 36px;
+    line-height: 36px;
     text-align: start;
   }
 }
@@ -44,6 +105,18 @@
   font-weight: 400;
   color: var(--base-font-color);
   margin: 0;
+
+  @media (--middle-vp) {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: start;
+  }
+
+  @media (--wide-vp) {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: start;
+  }
 }
 
 .nutrition-programm__link {
@@ -57,6 +130,18 @@
   text-decoration: none;
   border-top: 1px solid #d9d9d9;
   padding-top: 15px;
+
+  @media (--middle-vp) {
+    font-size: 20px;
+    line-height: 30px;
+    text-align: start;
+  }
+
+  @media (--wide-vp) {
+    font-size: 20px;
+    line-height: 30px;
+    text-align: start;
+  }
 }
 
 .nutrition-programm__link::after {
@@ -73,18 +158,4 @@
   @media (--wide-vp) {
     margin-left: 28px;
   }
-}
-
-.nutrition-programm__card--slim::before {
-  content: url("../../icons/cat-slim.svg");
-  display: block;
-  width: 50px;
-  height: 53px;
-}
-
-.nutrition-programm__card--fat::before {
-  content: url("/source/icons/cat-muscle.svg");
-  display: block;
-  width: 67px;
-  height: 50px;
 }
