--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -5,9 +5,15 @@
     </a>
   </div>
   <div class="social">
-    <a class="social__link" href="https://vk.com/htmlacademy" target="_blank">Мы в vk</a>
-    <a class="social__link" href="https://instagram.com/htmlacademy/" target="_blank">Мы в instagram</a>
-    <a class="social__link" href="https://facebook.com/htmlacademy" target="_blank">Мы в facebook</a>
+    <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+      <img class="social__image" src="../icons/sprite.svg#vkontakte" alt="Мы в Vk">
+    </a>
+    <a class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
+      <img class="social__image" src="../icons/sprite.svg#instagram" alt="Мы в instagram">
+    </a>
+    <a class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
+      <img class="social__image" src="../icons/sprite.svg#facebook" alt="Мы в facebook">
+    </a>
   </div>
   <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
 </footer>
