--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,10 +1,7 @@
 <header class="header">
   <nav class="navigation">
     <div class="navigation__logo-container">
-      <a href="index.html" class="navigation__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-        <img src="img/logo-cat.svg" alt="" class="logo-img">
-        <img src="img/logo-words.svg" alt="" class="logo-words">
-      </a>
+      <a href="index.html" class="navigation__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}></a>
     </div>
     <button class="navigation__menu-button" type="button">
       <span class="visually-hidden">Кнопка вызова меню</span>
