--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -6,3 +6,29 @@
     background-color: var(--header-background-color-mobile);
   }
 }
+
+.header::after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 302px;
+  width: 100%;
+  background-image: url("../../img/promo-background-mini.png");
+  background-size: cover;
+  z-index: -1;
+
+  @media (--middle-vp) {
+    display: none;
+  }
+
+  @media (--wide-vp) {
+    right: -110px;
+    top: 0;
+    background-image: url("../../img/promo-background-max.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 100% 50%;
+    width: 720px;
+    height: 694px;
+  }
+}
