--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -10,4 +10,9 @@
   --show-more-base-color: #f2f2f2;
   --line-after-description-color: #e6e6e6;
   --fact-border-color: #cdcdcd;
+  --example-background-color: #eaeaea;
+  --description-numders-color: #f2f2f2;
+  --explanation-middle-text-bgcolor: #ffffff;
+  --explanation-text-bgcolor: #eaeaea;
+  --footer-background-color: #f2f2f2;
 }
