--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,10 +1,53 @@
 .example {
-  background-color: #eaeaea;
-  padding: 25px 0;
+  position: relative;
+  padding-top: 25px;
+}
+
+.example::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+
+  @media (--not-wide-vp) {
+    background-color: var(--example-background-color);
+  }
+
+  @media (--not-narrow-vp) {
+    height: 462px;
+  }
+}
+
+.example__container::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 
   @media (--wide-vp) {
-    display: flex;
-    padding: 70px 0;
+    background-color: var(--example-background-color);
+  }
+
+  @media (--not-narrow-vp) {
+    height: 462px;
+  }
+}
+
+.example__container {
+  display: flex;
+  flex-direction: column;
+
+  @media (--wide-vp) {
+    flex-direction: row;
+    padding-top: 70px;
   }
 }
 
@@ -20,6 +63,7 @@
   @media (--wide-vp) {
     gap: 70px;
     max-width: 436px;
+    margin-bottom: 75px;
   }
 }
 
@@ -130,9 +174,13 @@
   display: inline-block;
   width: 80px;
   padding: 3px;
-  background-color: #eaeaea;
+  background-color: var(--explanation-text-bgcolor);
   bottom: 0;
   transform: translate(-50%, 50%);
+
+  @media (--middle-vp) {
+    background-color: var(--explanation-middle-text-bgcolor);
+  }
 }
 
 .example__facts-item-fact--time,
