--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,17 +1,25 @@
 .footer {
+  @media (--not-wide-vp) {
+    background-color: var(--footer-background-color);
+  }
+}
+
+.footer__container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 236px;
   padding-top: 39px;
-  background-color: #f2f2f2;
 
   @media (--not-narrow-vp) {
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
     min-height: 147px;
-    padding: 0;
+  }
+
+  @media (--wide-vp) {
+    background-color: var(--footer-background-color);
   }
 }
 
