--- a/source/sass/blocks/inputs-group.scss
+++ b/source/sass/blocks/inputs-group.scss
@@ -13,14 +13,12 @@
   }
 }
 
-@media (--middle-vp) {
-  .inputs-group.inputs-group--type_contacts {
+.inputs-group.inputs-group--type_contacts {
+  @media (--middle-vp) {
     border: transparent;
   }
-}
 
-@media (--wide-vp) {
-  .inputs-group.inputs-group--type_contacts {
+  @media (--wide-vp) {
     grid-column: 1/-1;
     flex-direction: row;
     justify-content: space-between;
@@ -31,18 +29,21 @@
 .inputs-group.inputs-group--type_program {
   position: relative;
   margin: 0;
-  border: 1px solid var(--input-border-color);
+
+  @media (--not-narrow-vp) {
+    border: 1px solid var(--input-border-color);
+    padding-left: 28px;
+  }
 
   @media (--middle-vp) {
     grid-column: 1/-1;
   }
-}
 
-@media (--wide-vp) {
-  .inputs-group.inputs-group--type_program {
+  @media (--wide-vp) {
     grid-column: 2/3;
   }
 }
+
 
 .inputs-group.inputs-group--type_additionals {
   @media (--middle-vp) {
@@ -51,10 +52,8 @@
     row-gap: 32px;
     border: transparent;
   }
-}
 
-@media (--wide-vp) {
-  .inputs-group.inputs-group--type_additionals {
+  @media (--wide-vp) {
     grid-column: 1/-1;
     display: flex;
     flex-direction: row;
@@ -62,15 +61,12 @@
   }
 }
 
-
-@media (--middle-vp) {
-  .inputs-group.inputs-group--type_cat {
+.inputs-group.inputs-group--type_cat {
+  @media (--middle-vp) {
     border-color: transparent;
   }
-}
 
-@media (--wide-vp) {
-  .inputs-group.inputs-group--type_cat {
+  @media (--wide-vp) {
     grid-column: 1/2;
   }
 }
@@ -205,60 +201,57 @@
   width: 100%;
   padding: 25px 0 36px 0;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -20px;
-    display: block;
-    width: 99px;
-    height: 2px;
-    background-color: var(--line-color);
-  }
-
-  @media (--wide-vp) {
+  @media (--not-narrow-vp) {
     white-space: nowrap;
+  }
+}
 
-    &::after {
-      width: 50%;
-      right: -30px;
-    }
+.inputs-group__title::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -20px;
+  display: block;
+  width: 99px;
+  height: 2px;
+  background-color: var(--line-color);
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: -30px;
-      display: block;
-      width: 30px;
-      height: 2px;
-      background-color: var(--line-color);
-      margin-right: 37px;
-    }
+  @media (--middle-vp) {
+    width: 50%;
+    right: -30px;
   }
 
+  @media (--wide-vp) {
+    top: 50%;
+    right: -110px;
+    width: 50%;
+    height: 2px;
+    margin-left: 35px;
+  }
+}
+
+
+.inputs-group__title::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 50%;
+  right: -20px;
+  width: 0;
+  height: 0;
+  background-color: var(--line-color);
+
+  @media (--middle-vp) {
+    left: -30px;
+    width: 30px;
+    height: 2px;
+    margin-right: 37px;
+  }
 
   @media (--wide-vp) {
-    &::after {
-      content: "";
-      top: 50%;
-      right: 0;
-      display: block;
-      width: 50%;
-      height: 2px;
-      background-color: var(--line-color);
-      margin-left: 35px;
-    }
-
-    &::before {
-      content: "";
-      top: 50%;
-      left: 0;
-      display: block;
-      width: 70px;
-      height: 2px;
-      background-color: var(--line-color);
-      margin-right: 40px;
-    }
+    left: -110px;
+    width: 70px;
+    height: 2px;
+    margin-right: 40px;
   }
 }
