--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -1,26 +1,22 @@
 .products-list {
-  @media (--narrow-vp) {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    padding: 41px 0 0;
-    margin: 0;
-    list-style: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 25px;
+  padding: 41px 0 0;
+  margin: 0;
+  list-style: none;
+
+  @media (--not-narrow-vp) {
+    grid-template-columns: repeat(auto-fit, minmax(245px, 1fr));
   }
 
   @media (--middle-vp) {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     column-gap: 60px;
     row-gap: 141px;
     padding: 163px 0 0;
   }
 
   @media (--wide-vp) {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     column-gap: 60px;
     row-gap: 141px;
     padding: 165px 0 0;
