--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,19 +1,21 @@
 <footer class="footer">
-  <div class="footer__logo-container">
-    <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-      <img src="img/logo-words.svg" alt="" class="logo-words">
-    </a>
+  <div class="page__centerer footer__container">
+    <div class="footer__logo-container">
+      <a href="index.html" class="footer__logo-link" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
+        <img src="img/logo-words.svg" alt="" class="logo-words">
+      </a>
+    </div>
+    <div class="social">
+      <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
+        <img class="social__image" src="../icons/sprite.svg#vkontakte" alt="Мы в Vk">
+      </a>
+      <a class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
+        <img class="social__image" src="../icons/sprite.svg#instagram" alt="Мы в instagram">
+      </a>
+      <a class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
+        <img class="social__image" src="../icons/sprite.svg#facebook" alt="Мы в facebook">
+      </a>
+    </div>
+    <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
   </div>
-  <div class="social">
-    <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank">
-      <img class="social__image" src="../icons/sprite.svg#vkontakte" alt="Мы в Vk">
-    </a>
-    <a class="social__link social__link--instagram" href="https://instagram.com/htmlacademy/" target="_blank">
-      <img class="social__image" src="../icons/sprite.svg#instagram" alt="Мы в instagram">
-    </a>
-    <a class="social__link social__link--facebook" href="https://facebook.com/htmlacademy" target="_blank">
-      <img class="social__image" src="../icons/sprite.svg#facebook" alt="Мы в facebook">
-    </a>
-  </div>
-  <div class="htmlacademy-logo"><a href="https://htmlacademy.ru/" target="_blank" class="htmlacademy-logo__link">HtmlAcademy</a></div>
 </footer>
