--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,7 +18,6 @@
 @import "./blocks/ad.scss";
 @import "./blocks/form-cat-program.scss";
 @import "./blocks/request-to-user.scss";
-@import "./blocks/product-item.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/inputs-group.scss";
 @import "./blocks/comment-label.scss";
@@ -26,3 +25,4 @@
 @import "./blocks/social.scss";
 @import "./blocks/htmlacademy-logo.scss";
 @import "./blocks/catalog-title.scss";
+@import "./blocks/background-promo.scss";
