--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -15,4 +15,5 @@
   --explanation-middle-text-bgcolor: #ffffff;
   --explanation-text-bgcolor: #eaeaea;
   --footer-background-color: #f2f2f2;
+  --alternative-menu-text-color: #ffffff;
 }
