--- a/source/sass/blocks/alternative-text-color.scss
+++ b/source/sass/blocks/alternative-text-color.scss
@@ -1,6 +1,6 @@
 .alternative-text-color {
   @media (--wide-vp) {
     color: var(--alternative-menu-text-color);
-    --line-color: #ffffff;
+    --menu-line-color: #ffffff;
   }
 }
