--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -171,7 +171,7 @@
 
 @media (--not-narrow-vp) {
   .navigation__item [aria-current="page"] {
-    border-bottom: 2px solid var(--line-color);
+    border-bottom: 2px solid var(--menu-line-color);
   }
 }
 
