--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -1,20 +1,21 @@
 .products-list {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+  column-gap: 40px;
   row-gap: 25px;
   padding: 41px 0 0;
   margin: 0;
   list-style: none;
 
-  @media (--middle-vp) {
-    grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
+  @media (--not-narrow-vp) {
     padding-top: 165px;
+  }
+
+  @media (--middle-vp) {
     column-gap: 60px;
   }
 
   @media (--wide-vp) {
-    grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
-    padding-top: 165px;
     column-gap: 80px;
   }
 }
