--- a/source/sass/blocks/show-more.scss
+++ b/source/sass/blocks/show-more.scss
@@ -9,14 +9,16 @@
   padding: 78px 0 25px;
   border-top: 1px solid #ebebeb;
 
+  @media (--not-narrow-vp) {
+    border: 1px solid #f2f2f2;
+  }
+
   @media (--middle-vp) {
     box-sizing: border-box;
     width: 100%;
     max-width: 324px;
     min-height: 429px;
     padding: 161px 30px 41px;
-    border: none;
-    box-shadow: inset 0 0 0 1px #f2f2f2;
   }
 
   @media (--wide-vp) {
