--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -16,4 +16,5 @@
   --explanation-text-bgcolor: #eaeaea;
   --footer-background-color: #f2f2f2;
   --alternative-menu-text-color: #ffffff;
+  --menu-line-color: #68b738;
 }
