--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -7,7 +7,7 @@
       <button class="navigation__menu-button" type="button">
         <span class="visually-hidden">Кнопка вызова меню</span>
       </button>
-      <ul {% if permalink == "index.html" %}class="navigation__list alternative-text-color"{% else %}class="navigation__list"{% endif %}>
+      <ul class="navigation__list {% if permalink == "index.html" %} alternative-text-color {% endif %}">
         {% for page in pages %}
           <li class="navigation__item">
             <a
